--- a/pd/requirements.txt
+++ b/pd/requirements.txt
@@ -1,5 +1,4 @@
-mediapipe
-Flask
-numpy 
-gunicorn
-opencv-python-headless
+Flask==2.1.1
+opencv-python==4.6.0.66
+mediapipe==1.2.0
+gunicorn==20.1.0
