--- a/pd/requirements.txt
+++ b/pd/requirements.txt
@@ -1,4 +1,5 @@
 Flask==2.1.1
-opencv-python==4.6.0.66
-mediapipe==1.2.0
+opencv-python==4.5.5.62
+mediapipe==0.10.11
+numpy==1.22.3
 gunicorn==20.1.0
