--- a/pd/requirements.txt
+++ b/pd/requirements.txt
@@ -1,7 +1,5 @@
-Flask==2.1.1
-opencv-python==4.5.5.62
-mediapipe==0.10.11
-numpy==1.22.3
-gunicorn==20.1.0
-pip==22.0.3
-setuptools==60.9.3
+Flask
+opencv-python
+mediapipe
+numpy
+gunicorn
